recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:7: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
      right();
      ^