recursion.logo.square.FourSquare.scala.code
override def run() {
  
  def draw_rect():Int={
    
    for (i <- 1 to 4){
      avance(100);
      right();
    }
    
    return 0;
  }
  
  for (i <-1 to 4) {
    draw_rect();
    
  }
  
}